# rust_ms

./: Cargo.toml  README.md
proto/: authentication.proto  login.proto  movie.proto  user.proto
service/: .env
service/account/: Cargo.toml
service/authentication/: Cargo.toml  build.rs
service/authentication/src/: main.rs
service/authentication/src/account/: api.rs  entity.rs
service/authentication/src/authentication/: entity.rs  interactor.rs  mapper.rs  service.rs
service/authentication/src/user/: api.rs  entity.rs  mapper.rs  mod.rs  repository.rs
service/gateway/: Cargo.toml  build.rs
service/gateway/src/: main.rs
service/gateway/src/authentication/: service.rs
service/token/: Cargo.toml
service/token/src/: main.rs
service/token/src/token/: repository.rs
service/user/: Cargo.toml  build.rs  diesel.toml
service/user/src/: main.rs
service/user/src/user/: entity.rs  interactor.rs  mapper.rs  mod.rs  repository.rs  service.rs
