[package]
name = "account"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = "0.1.68"
futures = "0.3.28"
amiquip = "0.4.2"
serde = "1.0.154"
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
mongodb = "2.6.0"
password-hash = "0.5.0"
argon2 = "0.5.0"
rand = "0.8.5"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"
