[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../../library/configuration" }
error = { path = "../../library/error" }
status = { path = "../../library/status" }
async-trait = "0.1.68"
futures = "0.3.28"
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"
