[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
configuration = { path = "../../library/configuration" }
tonic = "0.10.2"
prost = "0.12.2"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.10.2"